@@ -124,6 +124,7 @@ lighter making things easier to read.
 * (bug 8701) Check database lock status when blocking/unblocking users
 * ParserOptions and ParserOutput classes are now in their own files
 * (bug 8708) Namespace translations for Zealandic language
+* Renamed constructor methods to PHP5 __construct reserved name
 
 == Languages updated ==
 
